--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,130 @@
 aiofiles==0.5.0
 alembic==1.6.5
+amqp==5.0.9
 aniso8601==7.0.0
+anyio==3.6.0
+anyjson==0.3.3
+asgiref==3.5.0
 async-exit-stack==1.0.1
 async-generator==1.10
 autopep8==1.5.7
 bcrypt==3.2.0
-
-
+billiard==3.6.4.0
+blinker==1.4
+celery==5.2.3
+certifi==2020.6.20
+chardet==4.0.0
+charset-normalizer==2.0.12
 click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.4
 cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
 dnspython==2.1.0
+duplicity==0.8.21
 ecdsa==0.17.0
 email-validator==1.1.3
+ephem==4.1.3
 fastapi==0.68.0
+fasteners==0.14.1
+flower==1.0.0
+future==0.18.2
 graphene==2.1.9
 graphql-core==2.3.2
 graphql-relay==2.0.1
 greenlet==1.1.1
 h11==0.12.0
+httplib2==0.20.2
 httptools==0.3.0
+humanize==4.1.0
 idna==3.2
+importlib-metadata==4.6.4
 itsdangerous==1.1.0
+jeepney==0.7.1
 Jinja2==2.11.3
+keyring==23.5.0
+kombu==5.2.3
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
 Mako==1.1.5
 MarkupSafe==2.0.1
+monotonic==1.6
+more-itertools==8.10.0
+mysql-connector-python==8.0.29
+netifaces==0.11.0
+oauthlib==3.2.0
+olefile==0.46
 orjson==3.6.1
+paramiko==2.9.3
 passlib==1.7.4
+pexpect==4.8.0
+Pillow==9.0.1
+prometheus-client==0.14.1
 promise==2.3
-
+prompt-toolkit==3.0.28
+protobuf==3.12.4
+ptyprocess==0.7.0
 pyasn1==0.4.8
+pycairo==1.20.1
 pycodestyle==2.7.0
 pycparser==2.20
+pycups==2.0.1
 pydantic==1.8.2
+Pygments==2.11.2
+PyGObject==3.42.0
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.3.0+ubuntu2
 python-dateutil==2.8.2
+python-debian===0.1.43ubuntu1
 python-dotenv==0.19.0
 python-editor==1.0.4
 python-jose==3.3.0
+python-memcached==1.58
 python-multipart==0.0.5
+pytz==2022.1
+pyxdg==0.27
 PyYAML==5.4.1
+reportlab==3.6.8
 requests==2.26.0
 rsa==4.7.2
 Rx==1.6.1
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
 six==1.16.0
+sniffio==1.2.0
 SQLAlchemy==1.4.23
 starlette==0.14.2
+systemd-python==234
 toml==0.10.2
+tornado==6.1
 typing-extensions==3.10.0.0
+ubuntu-advantage-tools==27.7
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
 ujson==4.0.2
+unattended-upgrades==0.1
 urllib3==1.26.6
+usb-creator==0.3.7
 uvicorn==0.13.4
+uvloop==0.16.0
+vine==5.0.0
+wadllib==1.3.6
 watchgod==0.7
+wcwidth==0.2.5
 websockets==8.1
+wsproto==1.0.0
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
